<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.njit.CS656.traceapp.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/startTracking"
        android:title="@string/startTracking"
        android:showAsAction="always"
        />
    <item
        android:id="@+id/stopTracking"
        android:title="@string/stopTracking"
        android:showAsAction="always"
        />
    <item
        android:id="@+id/resetTrack"
        android:title="@string/resetTrack"
        android:showAsAction="always"
        />

</menu>
