<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MapsActivity" >
    
    
    <fragment
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        class="com.google.android.gms.maps.SupportMapFragment"
        tools:layout="@layout/abc_action_menu_layout" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        >

        <Button
            android:id="@+id/walk"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="setWalking"
            android:text="@string/walk" />

        <Button
            android:id="@+id/car"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="setDriving"
            android:text="@string/car" 
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:id="@+id/pubtrans"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="setPubTrans"
            android:text="@string/public_transit"
            style="?android:attr/borderlessButtonStyle"/>

    </LinearLayout>

</LinearLayout>